tests/negative/contexts/wrong_generic_context.orng
// wrong_generic_context.orng:15:46: error: expected a value of type `Int->Int with &My_Other_Context`, got a value of type `Int->Int with &My_Context`
//         do_twice[Int, My_Other_Context](scale, 146)
//                                             ^
// 
context My_Context {
    x: Int
}

context My_Other_Context {
    x: Int
}

fn main() -> Int {
    with My_Other_Context(2) {
        do_twice[Int, My_Other_Context](scale, 146)
    }
}

fn do_twice[T, context C](f: T -> T with C, x: T) -> T with C {
    f(f(x))
}

fn scale(x: Int) -> Int with My_Context { x * My_Context.x }
